fixed spacing after paragraph that was moved up.

--- a/scss/v2/headers.scss
+++ b/scss/v2/headers.scss
@@ -54,6 +54,8 @@
     .hero-subtitle {
       position: relative;
       top: -2em;
+      height: 0;
+      overflow: visible;
       &.gray {
         color: $sub-gray;
       }
